# opengl-notes

./: .gitignore
00-libs/linux-x11/libglfw/: GLFW.cbp  Makefile  cmake_uninstall.cmake
00-libs/linux-x11/libglfw/docs/: Doxyfile  Makefile
00-libs/linux-x11/libglfw/examples/: Makefile  boing  gears  heightmap  offscreen  particles  sharing  simple  splitview  wave
00-libs/linux-x11/libglfw/src/: Makefile
00-libs/linux-x11/libglfw/tests/: Makefile  clipboard  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  triangle-vulkan  windows
01-init/opengldemo/: CMakeLists.txt  main.cpp
02-main-loop/opengldemo/: CMakeLists.txt  main.cpp
02-main-loop/opengldemo/include/: MainLoop.h
02-main-loop/opengldemo/include/utils/: Terminal.h
02-main-loop/opengldemo/src/: MainLoop.cpp
02-main-loop/opengldemo/src/utils/: Terminal.cpp
03-input/opengldemo/: CMakeLists.txt
03-input/opengldemo/include/: main_loop.h
03-input/opengldemo/src/: main_loop.cpp
04-input_mode/opengldemo/: main.cpp
04-input_mode/opengldemo/include/: input_controller.h  main_loop.h
04-input_mode/opengldemo/src/: input_controller.cpp  main_loop.cpp
05-triangle/opengldemo/: CMakeLists.txt  main.cpp
05-triangle/opengldemo/src/: main_loop.cpp
06-scene/opengldemo/: CMakeLists.txt  main.cpp
06-scene/opengldemo/include/: demo.h  loop.h  scene.h
06-scene/opengldemo/src/: demo.cpp  loop.cpp  scene.cpp
07-refactoring/opengldemo/: CMakeLists.txt
07-refactoring/opengldemo/include/: assets.h  demo.h  gl_renderer.h  input_modes.h  scene.h  window.h
07-refactoring/opengldemo/src/: demo.cpp  gl_renderer.cpp  scene.cpp
08-colored-triangle/opengldemo/: main.cpp
08-colored-triangle/opengldemo/include/: assets.h  scene.h
08-colored-triangle/opengldemo/src/: scene.cpp
09-quad/opengldemo/: CMakeLists.txt
09-quad/opengldemo/include/: assets.h  gl_renderer.h  scene.h
09-quad/opengldemo/src/: demo.cpp  gl_renderer.cpp  scene.cpp
09-refactoring-and-shaders/opengldemo/include/: attribute.h  mesh_descriptors.h
09-refactoring-and-shaders/opengldemo/src/: gl_object_composer.cpp  gl_object_composer.h  mesh_loader.cpp  mesh_loader.h
09-shaders/opengldemo/: CMakeLists.txt  main.cpp
09-shaders/opengldemo/include/: attribute.h  demo_assets.h  gl_renderer.h  gl_rendering_target.h  input_modes.h  mesh.h  mesh_descriptors.h  mesh_loader.h  scene.h
09-shaders/opengldemo/src/: attribute.cpp  demo.cpp  gl_renderer.cpp  gl_rendering_target.cpp  mesh.cpp  mesh_loader.cpp  scene.cpp  window.cpp
(+67 files in other folders)
